@@ -161,6 +161,7 @@ Release 0.90.2 - Unreleased
    HBASE-3687  Bulk assign on startup should handle a ServerNotRunningException
    HBASE-3617  NoRouteToHostException during balancing will cause Master abort
                (Ted Yu via Stack)
+   HBASE-3668  CatalogTracker.waitForMeta can wait forever and totally stall a RS
 
   IMPROVEMENTS
    HBASE-3542  MultiGet methods in Thrift
